--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');
+
 @function darken($color, $amount: 20) {
     @return mix(black, $color, $amount);
 }
@@ -16,10 +18,10 @@ $themes: (
         error: #e20000,
         success: #05be05,
         warning: #bebe05,
-        brand-color-1: #353535,
+        brand-color-1: #35353555,
         brand-color-2: #81affe,
         brand-color-3: white,
-        brand-color-4: #9a9a9a,
+        brand-color-4: #2f2f2f,
         brand-color-5: #a3a3a3,
         brand-color-6: #bdbdbd,
         brand-color-7: #6f6f6f,
@@ -37,10 +39,10 @@ $themes: (
         error: #e20000,
         success: #05be05,
         warning: #bebe05,
-        brand-color-1: #353535,
+        brand-color-1: #35353555,
         brand-color-2: #81affe,
         brand-color-3: white,
-        brand-color-4: #9a9a9a,
+        brand-color-4: #dfdfdf,
         brand-color-5: #a3a3a3,
         brand-color-6: #bdbdbd,
         brand-color-7: #6f6f6f,
@@ -48,7 +50,7 @@ $themes: (
 );
 
 @function get($property) {
-    @return map-get(map-get($themes, dark), $property);
+    @return map-get(map-get($themes, light), $property);
 }
 
 $size-h1: 3.25rem;
