--- a/src/style/scrape.module.scss
+++ b/src/style/scrape.module.scss
@@ -1,13 +1,46 @@
+@import "variables";
+
 .container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .box {
-    width: max(50%, 500px);
-    height: max(50%, 500px);
-    background-color: get(brand-color-1);
+  width: max(75%, 300px);
+  height: max(60%, 500px);
+  background-color: get(brand-color-1);
+  padding: 30px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.title {
+  position: relative;
+  width: 100%;
+  font-size: 3em;
+  text-align: center;
+  font-family: "Bebas Neue", sans-serif;
+  color: get(brand-color-4);
+}
+
+.resultsBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+
+
+.centeredDivChild {
+  & > div {
+    justify-content: center;
+    display: flex;
+    align-items: center;
+  }
 }
